JS Task_4 Employee Table Completed

--- a/Task_4_EmployeeTable/style.css
+++ b/Task_4_EmployeeTable/style.css
@@ -111,6 +111,7 @@ input:focus {
   text-align: center;
   border: 1px solid #eef0f1;
   background-color: transparent;
+  gap: 5px;
 }
 .container .main .main_employeeSystem .tableUsers .tableUsersAbout .tableUsersAboutUl .tableUsersAboutUlTitle {
   padding-block: 4px;
@@ -124,6 +125,9 @@ input:focus {
   border: none;
   background-color: transparent;
   text-align: center;
+}
+.container .main .main_employeeSystem .tableUsers .tableUsersAbout .tableUsersAboutUl .tableUsersAboutUlTitle .tableInputforChangeActive {
+  border: 1px solid #eef0f1;
 }
 .container .main .main_employeeSystem .tableUsers .tableUsersAbout .tableUsersAboutUl .tableUsersAboutUlTitle:last-child {
   gap: 10px;
